docs: Typography 컴포넌트 문서 개선 - 컴포넌트 이름 표시 및 사용법 예시 추가 (#24)

--- a/src/components/ui/Typography/Typography.mdx
+++ b/src/components/ui/Typography/Typography.mdx
@@ -6,9 +6,11 @@ import { Meta, Typeset } from '@storybook/blocks';
 
 ## Title (제목)
 
-### title-2xl-semibold-22
+### Title2xl
 
 **크기:** 22px | **행간:** 130% | **굵기:** SemiBold | **자간:** -2.5%
+
+**사용법:** `<Title2xl>제목 텍스트</Title2xl>`
 
 <Typeset
   fontSizes={['22px']}
@@ -17,9 +19,11 @@ import { Meta, Typeset } from '@storybook/blocks';
   fontFamily="Pretendard"
 />
 
-### title-xl-bold-20
+### TitleXl
 
 **크기:** 20px | **행간:** 130% | **굵기:** Bold | **자간:** -2.5%
+
+**사용법:** `<TitleXl>제목 텍스트</TitleXl>`
 
 <Typeset
   fontSizes={['20px']}
@@ -28,9 +32,11 @@ import { Meta, Typeset } from '@storybook/blocks';
   fontFamily="Pretendard"
 />
 
-### title-l-bold-19
+### TitleL
 
 **크기:** 19px | **행간:** 140% | **굵기:** Bold | **자간:** -2.5%
+
+**사용법:** `<TitleL>제목 텍스트</TitleL>`
 
 <Typeset
   fontSizes={['19px']}
@@ -39,9 +45,11 @@ import { Meta, Typeset } from '@storybook/blocks';
   fontFamily="Pretendard"
 />
 
-### title-m-semibold-19
+### TitleM
 
 **크기:** 19px | **행간:** 140% | **굵기:** SemiBold | **자간:** -2.5%
+
+**사용법:** `<TitleM>제목 텍스트</TitleM>`
 
 <Typeset
   fontSizes={['19px']}
@@ -50,9 +58,11 @@ import { Meta, Typeset } from '@storybook/blocks';
   fontFamily="Pretendard"
 />
 
-### title-s-bold-16
+### TitleS
 
 **크기:** 16px | **행간:** 140% | **굵기:** Bold | **자간:** -2.5%
+
+**사용법:** `<TitleS>제목 텍스트</TitleS>`
 
 <Typeset
   fontSizes={['16px']}
@@ -61,9 +71,11 @@ import { Meta, Typeset } from '@storybook/blocks';
   fontFamily="Pretendard"
 />
 
-### title-xs-semibold-16
+### TitleXs
 
 **크기:** 16px | **행간:** 140% | **굵기:** SemiBold | **자간:** -2.5%
+
+**사용법:** `<TitleXs>제목 텍스트</TitleXs>`
 
 <Typeset
   fontSizes={['16px']}
@@ -76,9 +88,11 @@ import { Meta, Typeset } from '@storybook/blocks';
 
 ## Body (본문)
 
-### body-xl-medium-16
+### BodyXl
 
 **크기:** 16px | **행간:** 140% | **굵기:** Medium | **자간:** -2.5%
+
+**사용법:** `<BodyXl>본문 텍스트</BodyXl>`
 
 <Typeset
   fontSizes={['16px']}
@@ -87,9 +101,11 @@ import { Meta, Typeset } from '@storybook/blocks';
   fontFamily="Pretendard"
 />
 
-### body-l-regular-16
+### BodyL
 
 **크기:** 16px | **행간:** 140% | **굵기:** Regular | **자간:** -2.5%
+
+**사용법:** `<BodyL>본문 텍스트</BodyL>`
 
 <Typeset
   fontSizes={['16px']}
@@ -98,9 +114,11 @@ import { Meta, Typeset } from '@storybook/blocks';
   fontFamily="Pretendard"
 />
 
-### body-m-medium-15
+### BodyM
 
 **크기:** 15px | **행간:** 140% | **굵기:** Medium | **자간:** -2.5%
+
+**사용법:** `<BodyM>본문 텍스트</BodyM>`
 
 <Typeset
   fontSizes={['15px']}
@@ -109,9 +127,11 @@ import { Meta, Typeset } from '@storybook/blocks';
   fontFamily="Pretendard"
 />
 
-### body-s-medium-14
+### BodyS
 
 **크기:** 14px | **행간:** 140% | **굵기:** Medium | **자간:** -2.5%
+
+**사용법:** `<BodyS>본문 텍스트</BodyS>`
 
 <Typeset
   fontSizes={['14px']}
@@ -120,9 +140,11 @@ import { Meta, Typeset } from '@storybook/blocks';
   fontFamily="Pretendard"
 />
 
-### body-xs-regular-14
+### BodyXs
 
 **크기:** 14px | **행간:** 140% | **굵기:** Regular | **자간:** -2.5%
+
+**사용법:** `<BodyXs>본문 텍스트</BodyXs>`
 
 <Typeset
   fontSizes={['14px']}
@@ -131,9 +153,11 @@ import { Meta, Typeset } from '@storybook/blocks';
   fontFamily="Pretendard"
 />
 
-### body-2xs-medium-12
+### Body2xs
 
 **크기:** 12px | **행간:** 140% | **굵기:** Medium | **자간:** -2.5%
+
+**사용법:** `<Body2xs>본문 텍스트</Body2xs>`
 
 <Typeset
   fontSizes={['12px']}
@@ -142,9 +166,11 @@ import { Meta, Typeset } from '@storybook/blocks';
   fontFamily="Pretendard"
 />
 
-### body-3xs-regular-12
+### Body3xs
 
 **크기:** 12px | **행간:** 140% | **굵기:** Regular | **자간:** -2.5%
+
+**사용법:** `<Body3xs>본문 텍스트</Body3xs>`
 
 <Typeset
   fontSizes={['12px']}
@@ -157,9 +183,11 @@ import { Meta, Typeset } from '@storybook/blocks';
 
 ## Poppins (영어)
 
-### poppins-title-xl-semibold-24
+### PoppinsTitleXl
 
 **크기:** 24px | **행간:** 130% | **굵기:** SemiBold | **자간:** 0%
+
+**사용법:** `<PoppinsTitleXl>영어 제목</PoppinsTitleXl>`
 
 <Typeset
   fontSizes={['24px']}
@@ -169,3 +197,24 @@ import { Meta, Typeset } from '@storybook/blocks';
 />
 
 ---
+
+## 사용법 예시
+
+```tsx
+// 기본 Typography 컴포넌트 사용
+<Typography variant="title-xl-bold-20">제목</Typography>
+
+// 미리 만들어진 컴포넌트 사용 (권장)
+<Title2xl>큰 제목</Title2xl>
+<TitleXl>중간 제목</TitleXl>
+<BodyL>본문 텍스트</BodyL>
+<BodyM>작은 본문</BodyM>
+
+// 태그 변경
+<Title2xl as="h1">메인 제목</Title2xl>
+<BodyL as="label">라벨 텍스트</BodyL>
+
+// 추가 스타일
+<TitleXl className="text-blue-600">파란색 제목</TitleXl>
+<BodyM className="text-gray-500">회색 본문</BodyM>
+```
